<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_button">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button">Retrofit - Type-safe HTTP client by Square, Inc</string>

    <string name="select_file_toast_message">Please select a file to download</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="ok">ok</string>
</resources>
